--- a/app.json
+++ b/app.json
@@ -42,7 +42,8 @@
           }
         }
       ],
-      "expo-secure-store"
+      "expo-secure-store",
+      "@notifee/react-native",
     ],
     "experiments": {
       "typedRoutes": true,
