--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "expo-image": "~3.0.10",
     "expo-image-picker": "^17.0.8",
     "expo-linking": "~8.0.8",
+    "expo-location": "~17.0.1",
     "expo-notifications": "~0.32.12",
     "expo-router": "~6.0.14",
     "expo-secure-store": "~15.0.7",
