--- a/app.json
+++ b/app.json
@@ -27,6 +27,11 @@
       "output": "static",
       "favicon": "./assets/images/favicon.png"
     },
+    "extra": {
+      "eas": {
+        "projectId": "06ef085c-fb9b-4888-a42b-52a95131ff74"
+      }
+    },
     "plugins": [
       "expo-router",
       "expo-notifications",
