adding real time tracking and kyc updating

--- a/eas.json
+++ b/eas.json
@@ -1,11 +1,27 @@
 {
-    "build": {
-      "dev": {
-        "developmentClient": true,
-        "distribution": "internal",
-        "android": {
-          "image": "ubuntu-18.04-jdk-11-ndk-r19c"
-        }
+  "cli": {
+    "appVersionSource": "local"
+  },
+  "build": {
+    "dev": {
+      "developmentClient": true,
+      "distribution": "internal",
+      "android": {
+        "image": "ubuntu-18.04-jdk-11-ndk-r19c"
       }
+    },
+    "production": {
+      "distribution": "store",
+      "android": {
+        "buildType": "app-bundle",
+        "image": "latest"
+      },
+      "env": {
+        "EXPO_PUBLIC_ENV": "production"
+      }
+    }
+  },
+  "submit": {
+    "production": {}
   }
 }
