--- a/package.json
+++ b/package.json
@@ -48,11 +48,10 @@
     "react-native": "0.81.5",
     "react-native-gesture-handler": "~2.28.0",
     "react-native-maps": "1.20.1",
-    "react-native-reanimated": "~4.1.1",
+    "react-native-reanimated": "^3.7.1",
     "react-native-safe-area-context": "~5.6.0",
     "react-native-screens": "~4.16.0",
     "react-native-web": "~0.21.0",
-    "react-native-worklets": "0.5.1",
     "react-redux": "^9.2.0",
     "socket.io-client": "^4.8.1"
   },
