--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@react-navigation/native": "^7.1.8",
     "@reduxjs/toolkit": "^2.10.1",
     "@rnmapbox/maps": "^10.2.8",
+    "async-mutex": "^0.5.0",
     "expo": "~54.0.23",
     "expo-camera": "^17.0.9",
     "expo-constants": "~18.0.10",
