--- a/package.json
+++ b/package.json
@@ -20,7 +20,6 @@
     "@react-navigation/elements": "^2.6.3",
     "@react-navigation/native": "^7.1.8",
     "@reduxjs/toolkit": "^2.10.1",
-    "@rnmapbox/maps": "^10.2.8",
     "async-mutex": "^0.5.0",
     "expo": "~54.0.23",
     "expo-camera": "^17.0.9",
@@ -36,6 +35,7 @@
     "expo-linear-gradient": "~15.0.8",
     "expo-linking": "~8.0.8",
     "expo-location": "~17.0.1",
+    "expo-maps": "~0.12.10",
     "expo-notifications": "~0.32.12",
     "expo-router": "~6.0.14",
     "expo-secure-store": "~15.0.7",
