add auth-entry component

--- a/package.json
+++ b/package.json
@@ -22,9 +22,11 @@
     "@reduxjs/toolkit": "^2.10.1",
     "async-mutex": "^0.5.0",
     "expo": "~54.0.23",
+    "expo-auth-session": "^7.0.10",
     "expo-camera": "^17.0.9",
     "expo-constants": "~18.0.10",
     "expo-contacts": "~15.0.11",
+    "expo-crypto": "~15.0.8",
     "expo-dev-client": "~6.0.18",
     "expo-device": "~8.0.9",
     "expo-file-system": "^19.0.17",
