--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@reduxjs/toolkit": "^2.10.1",
     "async-mutex": "^0.5.0",
     "expo": "~54.0.23",
+    "expo-audio": "~1.1.1",
     "expo-auth-session": "^7.0.10",
     "expo-camera": "^17.0.9",
     "expo-constants": "~18.0.10",
@@ -32,7 +33,7 @@
     "expo-device": "~8.0.9",
     "expo-file-system": "^19.0.17",
     "expo-font": "~14.0.9",
-    "expo-haptics": "~15.0.7",
+    "expo-haptics": "~15.0.8",
     "expo-image": "~3.0.10",
     "expo-image-picker": "^17.0.8",
     "expo-linear-gradient": "~15.0.8",
