add new google services.json

--- a/eas.json
+++ b/eas.json
@@ -28,7 +28,10 @@
         "simulator": false
       },
       "env": {
-        "EXPO_PUBLIC_ENV": "production"
+        "EXPO_PUBLIC_ENV": "production",
+        "EXPO_PUBLIC_GOOGLE_WEB_CLIENT_ID": "754065251959-scmvdlel13lf7kpbg3tdmevl7hj0299s.apps.googleusercontent.com",
+        "EXPO_PUBLIC_GOOGLE_IOS_CLIENT_ID": "754065251959-chelbj9aa06c2ifbpnmcot2mt6p61rkp.apps.googleusercontent.com",
+        "EXPO_PUBLIC_GOOGLE_IOS_URL_SCHEME": "com.googleusercontent.apps.754065251959-chelbj9aa06c2ifbpnmcot2mt6p61rkp"
       }
     }
   },
